<resources>
    <string name="app_name">Crud</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lista">Lista</string>
    <string name="cadastro">Cadastro</string>
    <string name="title_activity_lista">ListaActivity</string>
    <string name="despesa">Despesa</string>
    <string name="nome">Nome</string>
    <string name="categoria">Categoria</string>
    <string name="contas">Contas</string>
    <string name="alimentacao">Alimentação</string>
    <string name="lazer">Lazer</string>
    <string name="saude">Saúde</string>
    <string name="data">Data</string>
    <string name="valor">Valor</string>
    <string name="salvar">Salvar</string>
    <string name="despesas">Despesas</string>
    <string name="symbol_plus">+</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
</resources>
